# youtube-helper

./: .gitignore  Makefile  README.md  pyproject.toml
docs/plans/: 2026-03-02-watch-later-manager-plan.md  2026-03-02-youtube-helper-design.md  2026-03-03-web-dashboard-design.md  2026-03-03-web-dashboard-plan.md  2026-03-17-operation-feedback-ux.md  2026-03-17-simplify-remove-queue-design.md  2026-03-17-simplify-remove-queue-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  Layout.tsx  OperationStatus.tsx  ProgressBar.tsx  QueuePanel.tsx  ToastProvider.tsx  VideoFilters.tsx  VideoPlayerDialog.tsx  VideoTable.tsx  ViewModeToggle.tsx
frontend/src/hooks/: useApi.ts  useSSE.ts
frontend/src/pages/: AllVideos.tsx  Dashboard.tsx  LikedVideos.tsx  PlaylistDetail.tsx  (+4 more)
migrations/: 001_initial_schema.sql  002_operation_queue.sql
src/youtube_helper/: __init__.py  takeout.py
tests/: conftest.py  test_analyze.py  test_api_playlists.py  test_api_videos.py  test_auth.py  test_background_tasks.py  test_browser_purge.py  test_cli.py  test_db.py  test_events.py  test_fuzzy_search.py  test_handlers.py  test_playlist_cli.py  test_processor.py  test_queue.py  test_sync.py  test_takeout.py  test_watch_later.py  test_watch_later_manager.py  test_web_app.py  test_web_auth.py  test_web_cli.py  test_web_playlists.py  test_web_queue_routes.py  test_web_reset.py  test_web_routes_basic.py  test_web_sync.py  test_web_videos.py  test_web_watch_later.py
(+57 files in other folders)
